--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>XD~</title>
+    <title>Shawn的导航小站</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/index.css">
   </head>
   <body>
-    <p>hello, world</p>
+    <aside class="serif">
+      <figure class="avatar"><img src="./static/images/avatar.png"/>
+      </figure>
+      <section class="author-info">
+        <h2>Shawn Dai</h2>
+        <h4>Front-End Engineer</h4>
+      </section>
+      <address class="contact">
+        <h3>Contact me!</h3>
+        <hr>
+        <ul>
+          <li class="phone">18826234729</li>
+          <li class="email"><a href="mailto://daixuan1996@gmail.com">daixuan1996@gmail.com</a></li>
+          <li class="github"><a href="https://github.com/daix6" target="_blank">https://github.com/daix6</a></li>
+          <li class="weibo"><a href="http://weibo.com/1996DX" target="_blank">http://weibo.com/1996DX</a></li>
+          <li class="website"><a href="http://daixuan.me" target="_blank">http://daixuan.me</a></li>
+          <li class="degree"><a href="http://ss.sysu.edu.cn/InformationSystem/" target="_blank">Software School in SYSU</a></li>
+        </ul>
+      </address>
+    </aside>
+    <div class="container">
+      <main>
+        <header></header>
+        <article></article>
+      </main>
+    </div>
+    <footer>
+    </footer>
   </body>
 </html>
