--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shawn的导航小站</title>
+    <title>Shawn's Navigation</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
@@ -29,11 +29,48 @@
     </aside>
     <div class="container">
       <main>
-        <header></header>
-        <article></article>
+        <article>
+          <section class="short">
+            <header>
+              <h3>Welcome to Shawn's website!</h3>
+            </header>
+            <p>I'm Shawn, a junior at Software School, Sun Yat-Sen University. I'm learning how to be an excellent front-end engineer now.</p>
+          </section>
+          <section class="experience">
+            <header>
+              <h3>Experience</h3>
+            </header>
+            <p>Here are some useful links that I've put my energy in before, which may help you to know me better!</p>
+            <dl>
+              <dt class="resume">
+                <h5><a href="#" target="_blank">My resume</a></h5>
+              </dt>
+              <dd>
+                <p>A resume template</p>
+              </dd>
+              <dt class="fep">
+                <h5><a href="#" target="_blank">e_help</a></h5>
+              </dt>
+              <dd>
+                <p>A website</p>
+              </dd>
+              <dt class="diary">
+                <h5><a href="#" target="_blank">diary</a></h5>
+              </dt>
+              <dd>
+                <p>Daily records</p>
+              </dd>
+            </dl>
+          </section>
+          <section class="copyright">
+            <header>
+              <h3>Copyright</h3>
+            </header>
+            <p>Designed and Developed by Shawn Dai.</p>
+            <p>Copyright © 2015 daixuan.me. All Rights Reserved.</p>
+          </section>
+        </article>
       </main>
     </div>
-    <footer>
-    </footer>
   </body>
 </html>
