--- a/index.html
+++ b/index.html
@@ -1,101 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Shawn's Navigation</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/index.css">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      
-      ga('create', 'UA-63581862-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-  </head>
-  <body>
-    <aside>
-      <figure class="avatar"><img src="./static/images/avatar.png"/>
-      </figure>
-      <section class="author-info">
-        <h2>Shawn Dai</h2>
-        <h4>Front-End Engineer</h4>
-      </section>
-      <address class="contact">
-        <h3>Contact me!</h3>
-        <hr>
-        <ul>
-          <li class="phone">18826234729</li>
-          <li class="email"><a href="mailto://daixuan1996@gmail.com">daixuan1996@gmail.com</a></li>
-          <li class="github"><a href="https://github.com/daix6" target="_blank">https://github.com/daix6</a></li>
-          <li class="weibo"><a href="http://weibo.com/1996DX" target="_blank">http://weibo.com/1996DX</a></li>
-          <li class="website"><a href="http://daixuan.me" target="_blank">http://daixuan.me</a></li>
-          <li class="degree"><a href="http://ss.sysu.edu.cn/InformationSystem/" target="_blank">Software School in SYSU</a></li>
-        </ul>
-      </address>
-    </aside>
-    <div class="container">
-      <main>
-        <article>
-          <section id="welcome">
-            <header>
-              <h3> <a href="#welcome">Welcome to Shawn's website!</a><span id="click_mobile" class="fr"></span></h3>
-            </header>
-            <p>I'm Shawn, a junior who major in Software Engineering at Software School in Sun Yat-Sen University. I'm learning how to be an excellent front-end engineer now.</p>
-          </section>
-          <section id="experience">
-            <header>
-              <h3><a href="#experience">Experience</a></h3>
-            </header>
-            <p>Here are some useful links that I am working on or I've worked on, which may help you to know me better!</p>
-            <dl>
-              <dt class="game-2048">
-                <h5><a href="/2048/" target="_blank">Shawn's 2048</a></h5>
-                <dd>
-                  <p>An reimplementation of 2048.</p>
-                </dd>
-              </dt>
-              <dt class="diary">
-                <h5><a href="/diary/" target="_blank">Shawn's Diary</a></h5>
-              </dt>
-              <dd>
-                <p>Diary that records thing that I'm working on or need to pay attention to.</p>
-              </dd>
-              <dt class="fep">
-                <h5><a href="/e_help/" target="_blank">E_help</a></h5>
-              </dt>
-              <dd>
-                <p>A project which hopes to make help easier.</p>
-              </dd>
-              <dt class="resume">
-                <h5><a href="#" target="_blank">My resume</a></h5>
-              </dt>
-              <dd>
-                <p>A resume template which read data from JSON file and generate static page with Jade and Less.</p>
-              </dd>
-              <dt class="blog">
-                <h5><a href="#" target="_blank">My blog</a></h5>
-              </dt>
-              <dd>
-                <p>My technical blog for summary or something important.</p>
-              </dd>
-            </dl>
-          </section>
-          <footer id="copyright">
-            <header>
-              <h3> <a href="#copyright">Copyright</a></h3>
-            </header>
-            <address>Designed and Developed by Shawn Dai - <a href="https://github.com/daix6/daix6.github.io" target="_blank">Source</a></address>
-            <p>
-              Copyright 2015 © daixuan.me. All Rights Reserved.
-              
-            </p>
-          </footer>
-        </article>
-      </main>
-    </div>
-    <script src="./js/bundle.js" type="text/javascript"></script>
-  </body>
+<html lang="zh">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>shawn - 导航</title>
+  <link rel="stylesheet" href="./index.css">
+</head>
+<body>
+  <div class="center">
+    <p class="welcome">你好，欢迎造访 shawndai 的小站~ :)</p>
+    <ul>
+      <li>这是我的<a href="/resume">简历</a>；</li>
+      <li>这是我的<a href="/blog">博客</a>；</li>
+      <li>发邮件给我 <a href="mailto:daixuan1996@gmail.com">daixuan1996@gmail.com</a>；</li>
+      <li>这是我的 <a href="https://github.com/daix6">Github</a>。</li>
+    </ul>
+    <p>Visit English version click <a href="index.en.html">here</a>!</p>
+  </div>
+</body>
 </html>
