--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>shawn - 导航</title>
   <link rel="stylesheet" href="./index.css">
+  <link rel="shortcut icon" type="image/png" href="./logo.png"/>
 </head>
 <body>
   <div class="center">
